[core] Stop NoLoops from corrupting the network it validates (B1)
To decide whether a link closed a loop, the constraint removed the link
from the network, looked for a path, and added it back — the other way
round. isChild(node1, node2) means "node1 is a child of node2", so the arc
is node2 -> node1; it removed exactly that and then added node1 -> node2.
Every arc of the network came out reversed. And since this check runs during
ordinary validation, through ProbNet.getUnsatisfiedConstraints, validating a
network left it corrupted, in silence. A constraint is precisely the thing
that must not modify what it validates — PNConstraint is even marked
Immutable.

Now nothing is removed. A link closes a loop when its two ends are already
joined by some other path, and "other" is expressed by having existsPath
ignore the very link being judged, which is what its list of links to ignore
is for. This became reliable with 9590acd, which made that list block a link
in both senses during an undirected search; before it, only from -> to was
blocked.

The rewrite also drops the probNetOK flag, which was never reset: after the
first loop found, every later pair was reported as a loop too. There is no
shared state left to leak — each link is judged on its own — and each link is
now visited once instead of twice, once from each end.

The test was rewritten because it was asserting on the wrong network: it
built the undirected scenario and then asserted three times on directedNet,
so the undirected half was never checked at all. 1 test -> 7, and the two
that matter show the corruption for what it was: check a network whose links
are A -> B, B -> C and against the previous code they come back as B -> A,
C -> B.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>